--- a/hello.html
+++ b/hello.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 
-<h1>Hi!
-Welcome to my resume. 
+<p1>Hi!</p1>
+<p1>Welcome to my resume.</p1> 
 
-In my dream life I have lots of fun at work, hence... have fun!
+<p1>In my dream life I have lots of fun at work, hence... have fun!</p1>
 
-Have a good week :)
-Francisco de Carvalho Benito
+<p1>Have a good week :)</p1>
+<p1>Francisco de Carvalho Benito</p1>
 
- <a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></h1>
+ <p1><a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></p1>
 
 
 </body>
