--- a/hello.html
+++ b/hello.html
@@ -8,15 +8,12 @@
 <body>
 
 <h1>Hi!</h1>
- <br>
-<p1>Welcome to my resume.</p1> 
- <br>
-<p1>In my dream life I have lots of fun at work, hence... have fun!</p1>
- <br>
-<p1>Have a good week :)</p1>
-<p1>Francisco de Carvalho Benito</p1>
- <br>
- <p1><a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></p1>
+<p1><br>
+ Welcome to my resume.<br>
+<p1>In my dream life I have lots of fun at work, hence... have fun! <br>
+<p1>Have a good week :) 
+<p1>Francisco de Carvalho Benito <br>
+<p1><a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></p1>
 
 
 </body>
