--- a/hello.html
+++ b/hello.html
@@ -8,11 +8,10 @@
 <body>
 
 <h1>Hi!</h1>
-<br>
- Welcome to my resume.<br>
- In my dream life I have lots of fun at work, hence... have fun! <br>
- Have a good week :) 
- Francisco de Carvalho Benito<br>
+ Welcome to my resume.<br><br>
+ In my dream life I have lots of fun at work, hence... have fun! <br><br>
+ Have a good week :)<br>
+ Francisco de Carvalho Benito<br><br>
 <p1><a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></p1>
 
 
