--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Hi!</h1>
-</p>Welcome to my resume.<br><br>
+</p>Welcome to my resume!<br><br>
  In my dream life I have lots of fun at work, hence... have fun! <br><br>
  Have a good week :)<br>
  Francisco de Carvalho Benito<br><br></p>
