--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
  In my dream life I have lots of fun at work, hence... have fun! <br><br>
  Have a good week :)<br>
  Francisco de Carvalho Benito<br><br></p>
-<p1><a href="EDIT">CLICK if you want to enter the intimateDOTio website, safely, of course ;)</a></p1>
+<p1><a href="/franciscoportugueseandspanish.html">Click</a> if you want to enter the intimateDOTio website, safely, of course ;)</p1>
 
 
 </body>
