--- a/franciscoisportugueseandspanish.html
+++ b/franciscoisportugueseandspanish.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<title>EDIT</title>
+</head>
+ <script><input type="submit" value="Make the view bigger" 
+   onclick="window.location='/bigger.html';" /></script> 
+<body>
+
+</body>
+</html>
