--- a/franciscoisportugueseandspanish.html
+++ b/franciscoisportugueseandspanish.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>EDIT</title>
+<title>EDIT2</title>
 </head>
  <script><input type="submit" value="Make the view bigger" 
    onclick="window.location='/bigger.html';" /></script> 
